--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coc-toml",
-  "version": "0.0.4",
+  "version": "0.1.1",
   "description": "toml extension for coc-nvim",
   "author": "kkiyama117 <k.kiyama117@gmail.com>",
   "publisher": "kkiyama117",
@@ -18,15 +18,14 @@
   },
   "preview": true,
   "engines": {
-    "coc": "^0.0.77"
+    "coc": "^0.0.79"
   },
   "scripts": {
     "lint": "eslint src --ext ts",
     "clean": "rimraf lib",
     "watch": "webpack --watch",
-    "build": "webpack --mode production && npm run webpack-server",
+    "build": "webpack --mode production",
     "webpack": "webpack --mode development",
-    "webpack-server": "webpack --config webpack.config.server.js --mode production",
     "test-compile": "tsc -p ./",
     "prepare": "npm-run-all clean build"
   },
@@ -45,11 +44,11 @@
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "executable": "^4.1.1",
     "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.0",
     "rimraf": "^3.0.2",
-    "taplo-lsp": "^0.1.5",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "vscode-languageclient": "^6.1.3",
@@ -58,11 +57,53 @@
   },
   "activationEvents": [
     "onLanguage:toml",
-    "onLanguage:cargoLock",
-    "onCommand:coc-toml.pasteTomlAsJson",
-    "onCommand:coc-toml.copyTomlAsJson"
+    "onCommand:coc-toml.tomlToJson"
   ],
   "contributes": {
+    "grammars": [
+      {
+        "language": "toml",
+        "scopeName": "source.toml",
+        "path": "./toml.tmLanguage.json"
+      }
+    ],
+    "languages": [
+      {
+        "id": "toml",
+        "aliases": [
+          "TOML"
+        ],
+        "extensions": [
+          ".toml"
+        ],
+        "filenames": [],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "semanticTokenTypes": [
+      {
+        "id": "tomlArrayKey",
+        "superType": "variable",
+        "description": "Keys of regular arrays."
+      },
+      {
+        "id": "tomlTableKey",
+        "superType": "variable",
+        "description": "Keys of inline tables."
+      }
+    ],
+    "semanticTokenScopes": [
+      {
+        "scopes": {
+          "tomlArrayKey": [
+            "variable.key.array.toml"
+          ],
+          "tomlTableKey": [
+            "variable.key.table.toml"
+          ]
+        }
+      }
+    ],
     "configuration": {
       "type": "object",
       "title": "coc-toml configuration",
@@ -78,11 +119,34 @@
           "scope": "resource",
           "default": true
         },
+        "coc-toml.taploConfig": {
+          "description": "An absolute, or workspace relative path to the Taplo configuration file.",
+          "type": "string",
+          "scope": "resource"
+        },
+        "coc-toml.taploConfigEnabled": {
+          "description": "Whether to enable the usage of a Taplo configuration file.",
+          "type": "boolean",
+          "scope": "resource",
+          "default": true
+        },
         "coc-toml.semanticTokens": {
           "description": "Enable semantic tokens for inline table and array keys. If enabled, keys of arrays and inline tables will have the same color as table headers and array of tables headers.",
           "type": "boolean",
           "scope": "resource",
           "default": false
+        },
+        "coc-toml.commands.copyTomlAsJson": {
+          "description": "Show the \"Copy Selection as JSON\" command in the palette.",
+          "type": "boolean",
+          "scope": "resource",
+          "default": true
+        },
+        "coc-toml.commands.pasteTomlAsJson": {
+          "description": "Show the \"Paste as JSON\" command in the palette.",
+          "type": "boolean",
+          "scope": "resource",
+          "default": true
         },
         "coc-toml.formatter.alignEntries": {
           "description": "Align consecutive entries vertically.",
@@ -188,16 +252,49 @@
             ".*/pyproject\\.toml": "toml_builtin://pyproject"
           }
         },
+        "coc-toml.extension.actions.schema.addNewBuiltins": {
+          "description": "Whether to update new builtin schema associations.",
+          "scope": "resource",
+          "type": "string",
+          "enum": [
+            "ask",
+            "always",
+            "never"
+          ],
+          "default": "ask"
+        },
+        "coc-toml.extension.actions.schema.removeOldBuiltins": {
+          "description": "Whether to remove old builtin schema associations.",
+          "scope": "resource",
+          "type": "string",
+          "enum": [
+            "ask",
+            "always",
+            "never"
+          ],
+          "default": "ask"
+        },
         "coc-toml.debug": {
           "description": "Enable features to debug the extension.",
           "type": "boolean",
           "scope": "resource",
           "default": false
+        },
+        "coc-toml.updates.prompt": {
+          "type": "boolean",
+          "default": true,
+          "description": "Prompt the user before downloading rust-analyzer",
+          "scope": "resource"
+        },
+        "coc-toml.serverPath": {
+          "type": [
+            "null",
+            "string"
+          ],
+          "default": null,
+          "description": "Path to executable (points to bundled binary by default)."
         }
       }
     }
-  },
-  "dependencies": {
-    "@taplo/lib": "^0.1.4"
   }
 }
